test/TestPhases/typechecker/invalid/usehiddenactivity.blc
import os "../imports/hiddenactivity"

module

activity h()
    run os.f()  
end